fix: better spacing on !

--- a/client/src/templates/Challenges/components/help-modal.css
+++ b/client/src/templates/Challenges/components/help-modal.css
@@ -4,6 +4,7 @@
 
 .fa-circle-exclamation {
   font-size: 3rem;
+  padding-bottom: 10px;
 }
 
 @media screen and (max-width: 767px) {
